...
        shape: const Border(
          bottom: BorderSide(color: Colors.black, width: 3),
        ),
        toolbarHeight: 70,
        centerTitle: true,
        title: const Text(
          'RETTE DIE WELT', 
          style: TextStyle(fontWeight: FontWeight.w900, letterSpacing: 2, fontSize: 22)
        ),
        bottom: PreferredSize(
            preferredSize: const Size.fromHeight(70.0),
            child: Container(
              padding: const EdgeInsets.fromLTRB(10, 0, 10, 10),
...
